mra/MRAFilesHandler: Avoid using command line built with string concatenation.